--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
+body {
+  background: url("./imgs/trophy.png");
+  background-size: 10%;
+  background-repeat: repeat;
+}
+
 main {
   width: 100%;
   height: 100vh;
@@ -41,7 +47,7 @@ ul {
   padding: 1rem;
 }
 
-form button {
+button {
   background-color: transparent;
   border: 2px solid #000;
   padding: 0.2rem 1rem;
